--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,3 @@
-
 @misc{domoticaWiki,
   author = {{Wikipedia contributors}},
   title = {Domotica},
@@ -270,4 +269,44 @@
   year = {2022},
   note = {Accesso il 10 aprile 2025},
   url = {https://ieeexplore.ieee.org}
+}
+
+@misc{threadProtocol,
+  author = {{Thread Group}},
+  title = {Thread Protocol},
+  year = {2023},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://www.threadgroup.org}
+}
+
+@misc{x10Protocol,
+  author = {{X10.com}},
+  title = {X10 Protocol},
+  year = {2023},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://www.x10.com}
+}
+
+@misc{ipv6Standard,
+  author = {{Internet Society}},
+  title = {IPv6 Standard},
+  year = {2023},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://www.internetsociety.org/resources/deploy360/ipv6/}
+}
+
+@misc{zigbeeMesh,
+  author = {{Zigbee Alliance}},
+  title = {Zigbee Mesh Networking},
+  year = {2023},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://zigbeealliance.org/solution/zigbee/}
+}
+
+@misc{zwaveMesh,
+  author = {{Z-Wave Alliance}},
+  title = {Z-Wave Mesh Networking},
+  year = {2023},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://z-wavealliance.org/z-wave-specification/}
 }
