--- a/glossario.tex
+++ b/glossario.tex
@@ -18,6 +18,10 @@
     \item[KNX] Standard aperto per l'automazione degli edifici, utilizzato principalmente in sistemi cablati per applicazioni domotiche.
     \item[NIST IoT Security] Linee guida e best practice sulla sicurezza IoT definite dal National Institute of Standards and Technology.
 
+    \item[Rete mesh] Una rete in cui ogni dispositivo si connette direttamente ad altri dispositivi vicini, migliorando copertura e affidabilità.
+    \item[IPv6] Versione più recente del protocollo Internet, che consente un numero quasi illimitato di indirizzi IP.
+    \item[Hub centrale] Dispositivo centrale che coordina e gestisce le comunicazioni tra dispositivi intelligenti in una rete domotica.
+
 
     \item[RS-485] Standard di comunicazione seriale cablato, resistente alle interferenze e utilizzato principalmente in ambienti industriali e domotici per connessioni su lunghe distanze.
     \item[Bluetooth Low Energy (BLE)] Versione del protocollo Bluetooth a basso consumo energetico, particolarmente adatta per dispositivi IoT con alimentazione a batteria.
